# weather-accident-project

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
dbt/: dbt_project.yml
dbt/models/marts/: fct_incidents_flat.sql  fct_incidents_flat.yml
dbt/models/staging/: _sources.yml  stg_tps_incidents.sql  stg_tps_incidents.yml
migrations/: 001_create_raw_incidents.sql  002_create_weather_cache.sql  003_create_run_log.sql
scripts/: build_weather_cache.py  export_for_tableau.py  fetch_tps_incidents.py
scripts/utils/: logging_utils.py
tests/: conftest.py  test_build_weather_cache.py  test_export_for_tableau.py  test_fetch_tps_incidents.py
